added a cat imagine

--- a/test.html
+++ b/test.html
@@ -1,3 +1,14 @@
-<h1>Hey. Im a big heading</h1>
-<p>hey im a paragraph element . cool huh?</p>
-<a href="http://google.com" target="_blank" title="Let go to google">CLick me! Im a link!</a>
+<DOCTYPE html>
+	<!DOCTYPE html>
+	<html>
+	<head>
+		<title>Test Page</title>
+	</head>
+	<body>
+		<h1>Hey. Im a big heading</h1>
+		<p>hey im a <i><b>paragraph</b></i> element . cool huh?</p>
+		<a href="http://google.com" target="_blank" title="Let go to google">CLick me! Im a link!</a>
+		<p>My name is: <br> Kitty Cat <br>
+	<img src="img/cat.jpeg">
+</body>
+</html>
