--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 		<h2>This is fun</h2>
 		<p>Pyke is an absolute boss man</p>
 		<ul>
-			<li><a href="http://google.com"> link!</a></li>
-			<li><a href="http://youtube.com">CLick this link bitch</a></li>
+			<li><a target="_blank" href="http://google.com"> link!</a></li>
+			<li><a target="_blank" href="http://youtube.com">CLick this link bitch</a></li>
 		</ul>
 	</main>
 	<!-- footer -->
